Fixes: ALF-10289 - Adds padding to prevent dialogue title overlapping close button.
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@31505 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/document-details/document-versions.css
+++ b/root/projects/slingshot/source/web/components/document-details/document-versions.css
@@ -92,3 +92,8 @@
 {
    padding: 4px 0 10px;
 }
+
+div.revert-version.yui-panel div.hd
+{
+   padding-right: 32px;
+}
